# fundus-grader

./: .gitignore  LICENSE  README.md  angular.json  package-lock.json  package.json
analysis/: mouse_track_viewer.py  test.ipynb
script/: HMR.ipynb  consts.py  create_data.py  inspect.ipynb  populate_dummy.py  populate_hmr.py  utils.py  viewer.py
script/HMR_files/libs/bootstrap/: bootstrap-56ae8d94af59e334a594bd0a57a52a81.min.css
script/hmr/: load.py  predictions.py
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assignment_gen.rs  commands.rs  error.rs  image_protocol.rs  lib.rs  main.rs  preprocessing.rs  project_db.rs  results_db.rs  session.rs  state.rs
src/app/: app.component.ts  app.routes.ts  types.ts
src/app/components/admin/: admin.component.ts
src/app/components/ai-reveal/: ai-reveal.component.ts
src/app/components/grade-info/: grade-info.component.ts
src/app/components/grading-form/: grading-form.component.ts
src/app/components/lang-toggle/: lang-toggle.component.ts
src/app/components/login/: login.component.ts
src/app/components/session/: session.component.ts
src/app/components/viewer/: helper.ts  interface.ts  utils.ts  viewer.component.html  viewer.component.scss  viewer.component.ts
src/app/i18n/: en.ts  fr.ts  transloco.config.ts
src/app/services/: api.service.ts  app-state.service.ts  idle.service.ts  language.service.ts
