[package]
name = "fundus-grader"
version = "0.1.0"
description = "Fundus image grading study tool"
authors = ["Clément"]
edition = "2021"

[lib]
name = "fundus_grader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = "0.25"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rayon = "1.12.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
